# lpk-talent-platform

./: .dockerignore  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 4b7d2c91e0aa_add_conversation_turns.py  6d2f8a13c7e9_add_interview_turn_meta.py  82f09410d515_initial_data_model.py  9c4e1f8b27a3_add_review_columns_and_company_share_.py  df085a7ad5ed_add_auth_sessions.py
backend/app/: config.py  db.py  main.py  seed.py
backend/app/content/: __init__.py  pronunciation_phrases_v1.json  quiz_bank_v1.json
backend/app/models/: __init__.py  auth.py  common.py  content.py  enums.py  event.py  org.py  passport.py  practice.py  records.py
backend/app/prompts/: conversation_v1.py  interview_v1.py  quiz_gen_v1.py
backend/app/routers/: auth.py  company_links.py  conversation.py  dashboard.py  deps.py  drill.py  health.py  interview.py  me.py  mock.py  passport.py  review.py  share.py  speech.py  students.py
backend/app/schemas/: auth.py  conversation.py  dashboard.py  drill.py  interview.py  passport.py  share.py  (+3 more)
backend/tests/: test_admin_kpi.py  test_audio.py  test_auth.py  test_company_links.py  test_content_bank.py  test_conversation.py  test_drill.py  test_health.py  test_interview.py  test_mock.py  test_models.py  test_passport.py  test_passport_pdf.py  test_quiz_bank.py  test_quiz_gen.py  test_review_queue.py  test_seed.py  test_share_links.py  test_speech.py  test_streak.py  test_students.py  test_students_detail.py  test_tts.py
(+60 files in other folders)
