[project]
name = "lpk-backend"
version = "0.1.0"
description = "LPK Talent Platform backend (PoC)"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# Alembic autogenerate output is not hand-formatted.
"alembic/versions/*" = ["E501", "I001"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
